# AIModelOps

./: .env.example  .gitignore  AIMO_CLI.ps1  README.md  package-lock.json  package.json  requirements.txt  run.ps1  run_linux.sh  run_mac.sh  run_windows.bat
.github/workflows/: deploy.yml  test.yml
db/: schema.sql
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.tsx  PromptContext.tsx  chains.ts  data.ts  prompts.ts  storage.ts  theme.ts  types.ts
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: AppShell.tsx  BatchModePage.tsx  BatchRunner.tsx  CategoryPage.tsx  ChainModePage.tsx  Confirm.tsx  PanelCard.tsx  PromptCards.tsx  PromptDrawer.tsx  PromptForm.tsx  Sidebar.tsx
inputs/: sql_gen.json  summarize.json
prompt_chains/: diagnose_resolve_tighten.yaml  extract_analyze_report.yaml
prompts/: analyze.yaml  diagnose.yaml  extract.yaml  report.yaml  resolve.yaml  tighten.yaml
runner/: config.py  logger.py  main.py  requirements.txt  run_batch.py  run_prompt.py  run_prompt_chain.py
