[package]
name = "aimodelops"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"



[lib]



name = "aimodelops_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

